# rust-spider

./: .gitignore  Cargo.toml  README.md  install.sh
src/: analyzer.rs  crawler.rs  main.rs  page.rs  storage.rs
src/results/: www.wikipedia.org__.txt
